--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=8081
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/ms-user
-spring.datasource.username=postgres
-spring.datasource.password=banco123
+spring.datasource.url= jdbc:postgresql://localhost:5432/ms.user
+spring.datasource.username=Rodrigo
+spring.datasource.password=primavera123
 spring.jpa.hibernate.ddl-auto=update
 
-spring.rabbitmq.addresses=amqps://******:hM6QMAkEb3Rr4ZZh-O3VElcveMwv@beaver.rmq.cloudamqp.com/******
+spring.rabbitmq.addresses=amqps://cpmdtycs:SWuwUsu7enCHPHgTNr4jL_eQntpEF2oC@gorilla.lmq.cloudamqp.com/cpmdtycs
 
 broker.queue.email.name=default.email
