--- a/email/src/main/resources/application.properties
+++ b/email/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 server.port=8082
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/ms-email
-spring.datasource.username=postgres
-spring.datasource.password=banco123
+spring.datasource.url= jdbc:postgresql://localhost:5432/ms.email
+spring.datasource.username=Rodrigo
+spring.datasource.password=primavera123
 spring.jpa.hibernate.ddl-auto=update
 
-spring.rabbitmq.addresses=amqps://******:hM6QMAkEb3Rr4ZZh-O3VElcveMwv@beaver.rmq.cloudamqp.com/******
+spring.rabbitmq.addresses=amqps://cpmdtycs:SWuwUsu7enCHPHgTNr4jL_eQntpEF2oC@gorilla.lmq.cloudamqp.com/cpmdtycs
 
 broker.queue.email.name=default.email
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=decod*****@gmail.com
-spring.mail.password=**** **** **** ****
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=f4d0072f3cab29
+spring.mail.password=40279236d0c8a6
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
