--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -1,10 +1,17 @@
 server.port=8081
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/ms.user
-spring.datasource.username=Rodrigo
-spring.datasource.password=primavera123
+spring.datasource.url= jdbc:postgresql://localhost:5432/ms-user
+spring.datasource.username=postgres
+spring.datasource.password=@Senha11
 spring.jpa.hibernate.ddl-auto=update
 
-spring.rabbitmq.addresses=amqps://cpmdtycs:SWuwUsu7enCHPHgTNr4jL_eQntpEF2oC@gorilla.lmq.cloudamqp.com/cpmdtycs
+spring.rabbitmq.addresses=amqps://qvjzkimh:8LiyH3nHf8SJFQ2hV8QRfoKj-lDzg6-V@beaver.rmq.cloudamqp.com/qvjzkimh
+
+spring.rabbitmq.host=beaver.rmq.cloudamqp.com
+spring.rabbitmq.port=5671
+spring.rabbitmq.username=qvjzkimh
+spring.rabbitmq.password=8LiyH3nHf8SJFQ2hV8QRfoKj-lDzg6-V
+spring.rabbitmq.virtual-host=qvjzkimh
+spring.rabbitmq.ssl.enabled=true
 
 broker.queue.email.name=default.email
