--- a/email/src/main/resources/application.properties
+++ b/email/src/main/resources/application.properties
@@ -1,17 +1,20 @@
 server.port=8082
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/ms.email
-spring.datasource.username=Rodrigo
-spring.datasource.password=primavera123
+spring.datasource.url= jdbc:postgresql://localhost:5432/ms-email
+spring.datasource.username=postgres
+spring.datasource.password=@Senha11
 spring.jpa.hibernate.ddl-auto=update
 
-spring.rabbitmq.addresses=amqps://cpmdtycs:SWuwUsu7enCHPHgTNr4jL_eQntpEF2oC@gorilla.lmq.cloudamqp.com/cpmdtycs
+spring.rabbitmq.addresses=amqps://qvjzkimh:8LiyH3nHf8SJFQ2hV8QRfoKj-lDzg6-V@beaver.rmq.cloudamqp.com/qvjzkimh
 
 broker.queue.email.name=default.email
 
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=2525
-spring.mail.username=f4d0072f3cab29
-spring.mail.password=40279236d0c8a6
+spring.mail.username=3475cf0f16ffa7
+spring.mail.password=bd909aeef2745b
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+email.from=noreply@ms.com
